2007-12-06  David A. Capello  <dacap@users.sourceforge.net>

	* src/widgets/editor/editor.c (editor_draw_sprite): Fixed to allow
	differents indexed images in multiple editors in a screen
	color-depth > 8bpp.

	* src/util/misc.c (interactive_move_layer): Fixed problem with
	scroll in windowed moded and mouse-paint problem in
	double-buffering mode.

2007-12-05  David A. Capello  <dacap@users.sourceforge.net>

	* src/widgets/statebar.c (status_bar_set_text): Uses dirty
	region. This optimized the speed of the loading bar.

	* src/jinete/jsystem.c (ji_flip_dirty_region): Added dirty region.

	* src/file/png_format.c (save_png): Added.

2007-12-03  David A. Capello  <dacap@users.sourceforge.net>

	* src/raster/sprite.h (struct Sprite): Added "stock" (now the
	stock of images is shared between all layers).
	(struct Sprite): Added bgcolor field:

	* src/raster/layer.h (struct Layer): Removed the "stock" from the
	layers.

2007-11-28  David A. Capello  <dacap@users.sourceforge.net>

	* src/modules/gui.c (init_module_gui): Better graphics-resolution
	selection by default.

	* src/widgets/tabs.c: Done (finished the buttons to move the
	scroll).

	* jinete/src/jwidget.c (jwidget_pick): Fixed a bug: the disabled
	widgets didn't get the mouse never (so the button-pressed message
	was never sent to disable widgets).

2007-11-25  David A. Capello  <dacap@users.sourceforge.net>

	* src/widgets/tabs.c: Added tab.

2007-11-24  David A. Capello  <dacap@users.sourceforge.net>

	* src/commands/cmd_new_frame.c (copy_cel_in_next_frame): Fixed
	undo for new frames in other layers.

	* src/file/png_file.c (load_png): Finished.

	* src/commands/cmd_configure_screen.c: Added the new dialog to
	select the graphics mode.

2007-11-19  David A. Capello  <dacap@users.sourceforge.net>

	* src/commands/cmd_new_frame.c,
	src/commands/cmd_frame_properties.c,
	src/commands/cmd_remove_frame.c: Added frame operations.

2007-11-16  David A. Capello  <dacap@users.sourceforge.net>
